* Tue Jun 15 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Dropped puppet 5 support
- Bumped supported version of puppetlabs/stdlib
- Changed minute for scheduled tasks to a random number to reduce I/O load
- Updated to use systemd timers instead of cron by default

* Thu Jan 21 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
- Added Puppet 7 support
- Added default user_fileprop_files_dirs to cover the puppet apps
- Added PostgreSQL to the allowed items in /dev/shm for puppetdb
- Ensure that the initial propupd command runs after the puppet run is complete
- Added a rkhunter::propupd class to ensure that the first cut of properties is
  updated after all other items (particularly packages) have completed in the
  puppet run.

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.0.4
- Removed EL6 support

* Wed Apr 01 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.0.3
- Add support for EL8

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.2
- Update documentation
- Support puppetlabs-stdlib 6

* Wed Feb 27 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.0.1
- This is the initial code for a `pupmod-simp-rkhunter` module, which
  installs and configures rkhunter and unhide.