@@ -1,11 +1,9 @@
 ---
 fixtures:
   repositories:
-    cron_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-cron_core
-      puppet_version: '>= 6.0.0'
+    cron_core: https://github.com/simp/pupmod-puppetlabs-cron_core.git
     stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
     simplib: https://github.com/simp/pupmod-simp-simplib.git
-    systemd: https://github.com/simp/puppet-systemd
+    systemd: https://github.com/simp/puppet-systemd.git
   symlinks:
     rkhunter: "#{source_dir}"
