@@ -11,13 +11,11 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby    EOL
-# SIMP 6.4      5.5      2.40    TBD
-# PE 2018.1     5.5      2.40    2021-01 (LTS overlap)
-# PE 2019.8     6.18     2.5     2022-12 (LTS)
+# PE 2019.8     6.22     2.5     2022-12 (LTS)
+# PE 2021.Y     7.x      2.7     Quarterly updates
 #
-# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/docs/pe/latest/component_versions_in_recent_pe_releases.html
 # https://puppet.com/misc/puppet-enterprise-lifecycle
-# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ==============================================================================
 #
 # https://docs.github.com/en/actions/reference/events-that-trigger-workflows
@@ -111,8 +109,8 @@ jobs:
     strategy:
       matrix:
         puppet:
-          - label: 'Puppet 6.18 [SIMP 6.5/PE 2019.8]'
-            puppet_version: '~> 6.18.0'
+          - label: 'Puppet 6.22 [SIMP 6.6/PE 2019.8]'
+            puppet_version: '~> 6.22.1'
             ruby_version: '2.5'
           - label: 'Puppet 7.x'
             puppet_version: '~> 7.0'
